trunk/Archive2/d0/1239bcd0a33880/output
main.cpp: In lambda function:
main.cpp:52:50: error: 'find' was not declared in this scope
         return find(std::begin(x), std::end(x), i) != std::end(x);
                                                  ^
main.cpp:52:50: note: suggested alternative:
In file included from /usr/include/c++/4.8/bits/locale_facets.h:48:0,
                 from /usr/include/c++/4.8/bits/basic_ios.h:37,
                 from /usr/include/c++/4.8/ios:44,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/streambuf_iterator.h:369:5: note:   'std::find'
     find(istreambuf_iterator<_CharT> __first,
     ^
main.cpp: In function 'int main()':
main.cpp:57:16: error: expected primary-expression before '{' token
     if (3 <in> {1, 2, 3})
                ^
main.cpp:57:16: error: expected ')' before '{' token
